# bring-your-own-int

./: CMakeLists.txt  Config.cmake.in  CuriositasBiguint.pc.in  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  cmake.yml  devcontainer.yml  project.yml  reference.yml
include/: meson.build
include/curiositas/: Types.hpp
include/curiositas/container/: BitVector.hpp
include/curiositas/math/: BigUInt.hpp  SieveEratosthenes.hpp
lib/: meson.build
lib/container/: BitVector.Tests.cpp  BitVector.cpp
lib/math/: BigUInt.Benchmarks.cpp  BigUInt.Tests.cpp  BigUInt.cpp  SieveEratosthenes.Tests.cpp  SieveEratosthenes.cpp
plot/math/: scaling_exponentiation.gnuplot  scaling_multiplication_division.gnuplot  sieve_eratosthenes.gnuplot
reference-impl/: CMakeLists.txt  meson.build
reference-impl/include/curiositas/container/: BitVector.hpp
reference-impl/include/curiositas/math/: BigUInt.hpp
reference-impl/lib/container/: BitVector.Tests.cpp  BitVector.cpp
reference-impl/lib/math/: BigUInt.Benchmarks.cpp  BigUInt.Tests.cpp  BigUInt.cpp  SieveEratosthenes.Tests.cpp  SieveEratosthenes.cpp
reference-impl/plot/math/: multiplot_naive_implementations.gnuplot  scaling_plot_efficient.gnuplot
